# Shady

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
command/: CMakeLists.txt
command/include/: command-add.h  command-configure.h  command-connect.h  command-delete.h  command-disconnect.h  command-list.h  command-load.h  command-quit.h  command-root.h  command-run.h  command-save.h  command-show.h  command.h
command/src/: command-add.cpp  command-configure.cpp  command-connect.cpp  command-delete.cpp  command-disconnect.cpp  command-load.cpp  command-quit.cpp  command-run.cpp  command-show.cpp  command.cpp
common/: CMakeLists.txt
common/include/: file_utils.h  float_image.h  gl_utils.h  shader.h  string_utils.h
common/src/: file_utils.cpp  float_image.cpp  gl_utils.cpp  shader.cpp  string_utils.cpp
data/: icons.pxd  imgui.ini  sample_graph.json  split_graph.json
docs/: scripted_xform.md  ux.md  xform graph.md
gl_helpers/include/: shader.h
gl_helpers/src/: shader.cc
image_viewer/: CMakeLists.txt
image_viewer/include/: fragment.h  gl_utils.h  glfw_support.h  vertex.h
image_viewer/src/: gl_utils.cpp  glfw_support.cpp  image_io.cpp  main.cpp
iv/: CMakeLists.txt
iv/src/: graph.cpp  main_ui.cpp  xxmain.cpp
main/: CMakeLists.txt
main/include/: command-add.h  command-configure.h  command-connect.h  command-delete.h  command-disconnect.h  command-list.h  command-load.h  command-quit.h  command-run.h  command-save.h  command-show.h  command.h  graph.h  ui_graph.h  ui_menu.h  ui_state.h  ui_theme.h  ui_xform_config.h
main/src/: command-add.cpp  command-connect.cpp  command-delete.cpp  command-disconnect.cpp  command-list.cpp  command-save.cpp  command.cpp  graph.cpp  main_cli.cpp  main_ui.cpp  ui_graph.cpp  ui_menu.cpp  ui_theme.cpp  ui_xform_config.cpp
xform-graph/: CMakeLists.txt
xform-graph/include/: image_io.h  load-file-xform.h  render-xform.h  save-file-xform.h  single-io-shader-xform.h  split-channel-xform.h  test_config.h  xform-config.h  xform-exceptions.h  xform-factory.h  xform-graph.h  xform-io.h  xform-port.h  xform-texture-meta.h  xform.h
xform-graph/include/xforms/: add-channel-xform.h  brightness-xform.h  gaussian-blur-xform.h  load-file-xform.h  merge-channel-xform.h  render-xform.h  save-file-xform.h  single-io-shader-xform.h  split-channel-xform.h  xform-config.h  xform-port.h  xform.h
xform-graph/src/: brightness-xform.cpp  image_io.cpp  load-file-xform.cpp  render-xform.cpp  save-file-xform.cpp  single-io-shader-xform.cpp  split-channel-xform.cpp  xform-config.cpp  xform-exceptions.cc  xform-factory.cpp  xform-graph.cpp  xform-io.cpp  xform-port.cpp  xform.cpp
xform-graph/src/xforms/: add-channel-xform.cpp  brightness-xform.cpp  gaussian-blur-xform.cpp  load-file-xform.cpp  merge-channel-xform.cpp  render-xform.cpp  save-file-xform.cpp  single-io-shader-xform.cpp  split-channel-xform.cpp  xform-config.cpp  xform-port.cpp  xform.cpp
xform-graph/tests/: graph-integration-test.cpp  test_base_xform.cpp  test_base_xform.h  test_config.cpp  test_config.h  test_io.cpp  test_ports.cpp  test_ports.h
